--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass-loader": "^10.1.1",
     "vue": "^2.6.11",
     "vue-click-outside": "^1.1.0",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.5.1",
     "vuelidate": "^0.7.6",
     "vuex": "^3.6.2"
